--- a/基础数据任务/框架.ipynb
+++ b/基础数据任务/框架.ipynb
@@ -420,6 +420,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Batch 100, Loss: 0.958274442255497, Accuracy: 0.70453125\n",
+      "Epoch 1, Batch 200, Loss: 0.4114549823105335, Accuracy: 0.87515625\n",
+      "Epoch 1, Batch 300, Loss: 0.3639001946151257, Accuracy: 0.88921875\n",
+      "Epoch 1, Batch 400, Loss: 0.33598140612244604, Accuracy: 0.89734375\n",
+      "Epoch 1, Batch 500, Loss: 0.31051422879099844, Accuracy: 0.9078125\n",
+      "Epoch 1, Batch 600, Loss: 0.31353990726172926, Accuracy: 0.90734375\n",
+      "Epoch 1, Batch 700, Loss: 0.2756995743513107, Accuracy: 0.92171875\n",
+      "Epoch 1, Batch 800, Loss: 0.2456675610691309, Accuracy: 0.92734375\n",
+      "Epoch 1, Batch 900, Loss: 0.22653725825250148, Accuracy: 0.9325\n",
+      "Epoch 2, Batch 100, Loss: 0.20561796076595784, Accuracy: 0.94078125\n",
+      "Epoch 2, Batch 200, Loss: 0.20467623963952064, Accuracy: 0.94046875\n",
+      "Epoch 2, Batch 300, Loss: 0.1883347226306796, Accuracy: 0.94546875\n",
+      "Epoch 2, Batch 400, Loss: 0.1678795058093965, Accuracy: 0.95046875\n",
+      "Epoch 2, Batch 500, Loss: 0.18480229552835226, Accuracy: 0.94546875\n",
+      "Epoch 2, Batch 600, Loss: 0.17126287873834373, Accuracy: 0.95203125\n",
+      "Epoch 2, Batch 700, Loss: 0.16673405427485705, Accuracy: 0.95046875\n",
+      "Epoch 2, Batch 800, Loss: 0.16614491358399391, Accuracy: 0.95328125\n",
+      "Epoch 2, Batch 900, Loss: 0.16339932881295682, Accuracy: 0.95078125\n",
+      "Epoch 3, Batch 100, Loss: 0.14416173253208397, Accuracy: 0.9559375\n",
+      "Epoch 3, Batch 200, Loss: 0.13703069807961582, Accuracy: 0.9553125\n",
+      "Epoch 3, Batch 300, Loss: 0.15070080559700727, Accuracy: 0.954375\n",
+      "Epoch 3, Batch 400, Loss: 0.12473198913037777, Accuracy: 0.96265625\n",
+      "Epoch 3, Batch 500, Loss: 0.12869960658252239, Accuracy: 0.96125\n",
+      "Epoch 3, Batch 600, Loss: 0.12405451348051429, Accuracy: 0.9634375\n",
+      "Epoch 3, Batch 700, Loss: 0.13412081010639668, Accuracy: 0.96\n",
+      "Epoch 3, Batch 800, Loss: 0.12632827246561645, Accuracy: 0.96015625\n",
+      "Epoch 3, Batch 900, Loss: 0.12337434072047472, Accuracy: 0.96421875\n",
+      "Epoch 4, Batch 100, Loss: 0.10777624131180347, Accuracy: 0.9665625\n",
+      "Epoch 4, Batch 200, Loss: 0.10948997043073178, Accuracy: 0.96671875\n",
+      "Epoch 4, Batch 300, Loss: 0.11030965524725617, Accuracy: 0.96828125\n",
+      "Epoch 4, Batch 400, Loss: 0.09996992070227861, Accuracy: 0.97109375\n",
+      "Epoch 4, Batch 500, Loss: 0.10655374318361283, Accuracy: 0.9690625\n",
+      "Epoch 4, Batch 600, Loss: 0.10194947434589267, Accuracy: 0.9675\n",
+      "Epoch 4, Batch 700, Loss: 0.10034855982288718, Accuracy: 0.96953125\n",
+      "Epoch 4, Batch 800, Loss: 0.11701712775975466, Accuracy: 0.96625\n",
+      "Epoch 4, Batch 900, Loss: 0.09401540402323008, Accuracy: 0.9709375\n",
+      "Epoch 5, Batch 100, Loss: 0.08259222676977515, Accuracy: 0.9765625\n",
+      "Epoch 5, Batch 200, Loss: 0.0945215437747538, Accuracy: 0.97\n",
+      "Epoch 5, Batch 300, Loss: 0.09206369115039706, Accuracy: 0.97359375\n",
+      "Epoch 5, Batch 400, Loss: 0.08860689790919424, Accuracy: 0.974375\n",
+      "Epoch 5, Batch 500, Loss: 0.08249289448373019, Accuracy: 0.9759375\n",
+      "Epoch 5, Batch 600, Loss: 0.08640723193064331, Accuracy: 0.9728125\n",
+      "Epoch 5, Batch 700, Loss: 0.09457120528444647, Accuracy: 0.969375\n",
+      "Epoch 5, Batch 800, Loss: 0.08411528329364955, Accuracy: 0.97546875\n",
+      "Epoch 5, Batch 900, Loss: 0.08219290403649211, Accuracy: 0.97640625\n",
+      "Finished Training\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "from torchvision import datasets, transforms\n",
+    "\n",
+    "# 初始化TensorBoard的SummaryWriter\n",
+    "writer = SummaryWriter(log_dir='../data/tensorboard/',filename_suffix='simple_net')\n",
+    "# 定义一个简单的神经网络\n",
+    "class SimpleNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(SimpleNet, self).__init__()\n",
+    "        self.fc1 = nn.Linear(28 * 28, 128)\n",
+    "        self.fc2 = nn.Linear(128, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, 28 * 28)\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "# 设置数据集和数据加载器\n",
+    "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
+    "train_dataset = datasets.MNIST(root='../data', train=True, download=False, transform=transform)\n",
+    "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "# 初始化网络、损失函数和优化器\n",
+    "model = SimpleNet()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
+    "# 将网络结构写入TensorBoard\n",
+    "writer.add_graph(model, next(iter(train_loader))[0])\n",
+    "\n",
+    "# 训练网络并记录损失\n",
+    "for epoch in range(5):\n",
+    "    running_loss = 0.0\n",
+    "    correct_num = 0\n",
+    "    total_num = 0\n",
+    "    for i, (inputs, labels) in enumerate(train_loader, 0):\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        total_num += labels.size(0)\n",
+    "        correct_num += (predicted == labels).sum().item()\n",
+    "        running_loss += loss.item()\n",
+    "        if i % 100 == 99:  # 每100个批次记录一次\n",
+    "            print(f'Epoch {epoch + 1}, Batch {i + 1}, Loss: {running_loss / 100}, Accuracy: {correct_num / total_num}')\n",
+    "            writer.add_scalar('train/loss', running_loss / 100, epoch * len(train_loader) + i)\n",
+    "            writer.add_scalar('train/accuracy', correct_num / total_num, epoch * len(train_loader) + i)\n",
+    "            running_loss = 0.0\n",
+    "            correct_num = 0\n",
+    "            total_num = 0\n",
+    "print('Finished Training')\n",
+    "\n",
+    "# 关闭SummaryWriter\n",
+    "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# vit_pytorch\n",
     "- https://github.com/lucidrains/vit-pytorch"
    ]
@@ -455,46 +582,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wandb  \n",
-    "- https://wandb.ai/"
+    "# wandb  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mwindbd\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.18.7"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>../data/wandb\\run-20241128_200522-yajh9ljv</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/windbd/test-project/runs/yajh9ljv' target=\"_blank\">test-model</a></strong> to <a href='https://wandb.ai/windbd/test-project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/windbd/test-project' target=\"_blank\">https://wandb.ai/windbd/test-project</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/windbd/test-project/runs/yajh9ljv' target=\"_blank\">https://wandb.ai/windbd/test-project/runs/yajh9ljv</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e32f71e8990440eb67eb36a545f4e93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.008 MB of 0.008 MB uploaded\\r'), FloatProgress(value=1.0, max=1.0)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <style>\n",
+       "        .wandb-row {\n",
+       "            display: flex;\n",
+       "            flex-direction: row;\n",
+       "            flex-wrap: wrap;\n",
+       "            justify-content: flex-start;\n",
+       "            width: 100%;\n",
+       "        }\n",
+       "        .wandb-col {\n",
+       "            display: flex;\n",
+       "            flex-direction: column;\n",
+       "            flex-basis: 100%;\n",
+       "            flex: 1;\n",
+       "            padding: 10px;\n",
+       "        }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>acc</td><td>▃▁▅▅▇▆▆▆▇██▇▇▇███▇</td></tr><tr><td>loss</td><td>██▃▂▃▂▂▂▁▂▂▂▁▁▁▂▂▂</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>acc</td><td>0.87552</td></tr><tr><td>loss</td><td>0.11704</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">test-model</strong> at: <a href='https://wandb.ai/windbd/test-project/runs/yajh9ljv' target=\"_blank\">https://wandb.ai/windbd/test-project/runs/yajh9ljv</a><br/> View project at: <a href='https://wandb.ai/windbd/test-project' target=\"_blank\">https://wandb.ai/windbd/test-project</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>../data/wandb\\run-20241128_200522-yajh9ljv\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import wandb\n",
     "import random\n",
     "\n",
-    "# start a new wandb run to track this script\n",
-    "wandb.init(settings=wandb.Settings(start_method=\"thread\"))\n",
-    "wandb.init(\n",
-    "    # set the wandb project where this run will be logged\n",
-    "    project=\"my-awesome-project\",\n",
-    "    \n",
-    "    # track hyperparameters and run metadata\n",
-    "    config={\n",
+    "# 设置超参数和配置\n",
+    "config = {\n",
     "    \"learning_rate\": 0.02,\n",
     "    \"architecture\": \"CNN\",\n",
     "    \"dataset\": \"CIFAR-100\",\n",
-    "    \"epochs\": 10,\n",
-    "    }\n",
+    "    \"epochs\": 20,\n",
+    "}\n",
+    "\n",
+    "# 初始化 wandb 运行\n",
+    "wandb.init(\n",
+    "    dir=\"../data/\",\n",
+    "    project=\"test-project\",\n",
+    "    config=config, # 保存配置,方便后续查看\n",
+    "    name=\"test-model\", \n",
+    "    tags=[\"cifar\", \"baseline\", \"cnn\"], # 添加标签，方便筛选\n",
+    "    mode=\"online\"\n",
     ")\n",
     "\n",
-    "\n",
-    "# simulate training\n",
-    "epochs = 10\n",
+    "# 模拟训练\n",
+    "epochs = config[\"epochs\"]\n",
     "offset = random.random() / 5\n",
     "for epoch in range(2, epochs):\n",
     "    acc = 1 - 2 ** -epoch - random.random() / epoch - offset\n",
     "    loss = 2 ** -epoch + random.random() / epoch + offset\n",
     "    \n",
-    "    # log metrics to wandb\n",
+    "    # 记录指标到 wandb\n",
     "    wandb.log({\"acc\": acc, \"loss\": loss})\n",
     "    \n",
-    "# [optional] finish the wandb run, necessary in notebooks\n",
+    "# 完成 wandb 运行\n",
     "wandb.finish()"
    ]
   },
@@ -549,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
